--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,6 +17,16 @@ header {
   text-align: right;
 }
 
+h1 {
+  color: white;
+  margin: 5px;
+  font-size: 25px;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 /* --- Estilização do conteúdo da página */
 main {
   background-color: white;
